# cityscape

./: .gitmodules  CMakeLists.txt  README.md  cityscape.cap  imgui.ini  run  update
data/: building.fs  building.vs  celestialBody.fs  celestialBody.vs  globalLightPass.fs  globalLightPass.vs  groundTile.fs  groundTile.vs  lightingPass.fs  lightingPass.vs  plane.fs  plane.vs  pointLight.fs  pointLight.vs  sky.fs  sky.vs  skybox.fs  skybox.vs  snow.fs  snow.vs  snowbank.vs  streetLight.vs  streetlight.fs  streetlight.vs
data/models/: snow.blend  snow.blend1  streetlight.blend  streetlight.mtl
data/shaders/: building.vs  celestialBody.fs  celestialBody.vs  empty.fs  globalLightPass.fs  globalLightPass.vs  groundTile.vs  lightSource.fs  pointLight.fs  pointLight.vs  shadow.vs  shadowPassInstances.vs  skybox.vs  snow.fs  snow.vs  snowbank.fs  snowbank.vs  streetLight.fs  streetLight.vs
data/textures/: buildingAtlas.aseprite  cityBlockGround.aseprite
phi/: app.cpp  app.hpp  camera.cpp  camera.hpp  cubemap.cpp  cubemap.hpp  framebuffer.cpp  framebuffer.hpp  geometry.hpp  gpubuffer.cpp  gpubuffer.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  phi.hpp  renderbatch.hpp  shader.cpp  shader.hpp  texture2d.cpp  texture2d.hpp  vertex.cpp  vertex.hpp  vertexattributes.cpp  vertexattributes.hpp
samplefw/: Grid2D.cpp  Grid2D.h  Grid3D.cpp  Grid3D.h  OrbitCamera.cpp  OrbitCamera.h  Sample.h  SampleRunner.cpp  SampleRunner.h  Sphere.cpp  Sphere.h
samplefw/data/: grid.fsh  grid.vsh  sphere.fsh  sphere.vsh
src/: block.cpp  block.hpp  building.cpp  building.hpp  camera.cpp  camera.hpp  cityscape.cpp  cityscape.hpp  groundtile.cpp  groundtile.hpp  lights.cpp  lights.hpp  main.cpp  plane.cpp  plane.hpp  shader.cpp  shader.hpp  sky.cpp  sky.hpp
src/components/: building.cpp  building.hpp  camera.cpp  camera.hpp  ground.cpp  ground.hpp  groundtile.cpp  groundtile.hpp  lights.cpp  lights.hpp  sky.cpp  sky.hpp
src/phi/: app.cpp  app.hpp  camera.cpp  camera.hpp  cubemap.cpp  framebuffer.cpp  framebuffer.hpp  geometry.hpp  gpubuffer.hpp  mesh.hpp  shader.hpp  texture2d.cpp  texture2d.hpp  vertex.hpp
src/resources/: cubemap.cpp  cubemap.hpp  framebuffer.cpp  framebuffer.hpp  geometry.hpp  gpubuffer.cpp  gpubuffer.hpp  mesh.hpp  shader.cpp  shader.hpp  texture2d.cpp  texture2d.hpp  vertex.cpp  vertex.hpp  vertexattributes.cpp  vertexattributes.hpp
wolf/: W_App.cpp  W_App.h  W_Buffer.h  W_BufferManager.cpp  W_BufferManager.h  W_Common.cpp  W_Common.h  W_IndexBuffer.cpp  W_IndexBuffer.h  W_Material.cpp  W_Material.h  W_MaterialManager.cpp  W_MaterialManager.h  W_Model.cpp  W_Model.h  W_Program.cpp  W_Program.h  W_ProgramManager.cpp  W_ProgramManager.h  W_RenderTarget.cpp  W_RenderTarget.h  W_SkinnedModel.cpp  W_SkinnedModel.h  W_Texture.cpp  W_Texture.h  W_TextureManager.cpp  W_TextureManager.h  W_Types.h  W_VertexDeclaration.cpp  W_VertexDeclaration.h  wolf.h
